# vec_rand

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: test_cumsum_f32.rs  test_cumsum_f64.rs  test_gen_random_vec.rs  test_random_cumsum_f32.rs  test_sample_distinct.rs  test_sampling.rs  test_splitmix64.rs  test_u64_to_f64.rs  test_uniform_sampling.rs  test_xorshift.rs  test_xorshiro256plus.rs  utils.rs
src/: bin.rs  gen_random_vec.rs  gen_random_vec_f64.rs  iter_suss.rs  lib.rs  random.rs  sample.rs  sample_avx.rs  sample_cumsum.rs  sample_f32.rs  sample_f32_adapt.rs  sample_k_distinct_uniform.rs  sample_linear.rs  sample_linear_unrolled.rs  sample_modifing.rs  sample_plain.rs  sample_uniform_biased.rs  sample_uniform_unbiased.rs  sample_unsafe.rs  splitmix64.rs  u64_to_f64.rs
src/cumsum_f32/: Cargo.toml  build.rs  cumsum_f32_plain.rs  cumsum_f32_scan.rs  cumsum_f32_sse_intrinsics.rs  cumsum_f32_unrolled.rs  cumsum_super_scalar_simd.rs  cumsum_unrolled.rs  mod.rs
src/cumsum_f32/src/: ccumsum.c  cumsum_f32.rs  cumsum_f32_avx.rs  cumsum_f32_avx_intrinsics.rs  cumsum_f32_plain.rs  cumsum_f32_scan.rs  cumsum_f32_sse.rs  cumsum_f32_sse_intrinsics.rs  cumsum_f32_unrolled.rs  cumsum_super_scalar_simd.rs  lib.rs
src/cumsum_f64/: Cargo.toml  cumsum_f64_avx_intrinsics.rs  cumsum_f64_plain.rs  cumsum_f64_scan.rs  cumsum_f64_sse_intrinsics.rs  cumsum_f64_sse_modifing.rs  cumsum_f64_unrolled.rs  cumsum_f64_unrolled_unsafe.rs  mod.rs
src/xorshift/: Cargo.toml  xorshift_avx.rs  xorshift_avx_intrinsics.rs  xorshift_avx_ss4.rs  xorshift_avx_ss8.rs  xorshift_plain.rs
src/xorshift_small/: mod.rs  xorshift_u16.rs  xorshift_u8.rs
src/xorshiro256plus/: Cargo.toml  mod.rs  (+3 more)
tests/: test_cumsum_f32.rs  test_cumsum_f64.rs  test_gen_random_vec.rs  test_sample.rs  test_sample_k_distinct_uniform.rs  test_suss_iter.rs  test_u64_to_f64.rs
(+22 files in other folders)
