[package]
name = "vec_rand"
version = "0.1.0"
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2018"

[lib]
name = "vec_rand"
path = "src/lib.rs"

[[bin]]
name = "measure_cycles"
path = "src/bin.rs"

[dependencies]
rand = {git="https://github.com/rust-random/rand.git"} 
log = "0.4"
cumsum_f32 = { path = "src/cumsum_f32" }
cumsum_f64 = { path = "src/cumsum_f64" }
xorshift = { path = "src/xorshift" }
xorshiro256plus = { path = "src/xorshiro256plus" }


[build]
rustflags = "-C target-cpu=native"

[profile.release]
opt-level = 3
codgen-units=1
lto = "fat"
