[package]
name = "vec_rand"
version = "0.1.0"
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2018"

[lib]
name = "vec_rand"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
itertools = "0.8.0"

[features]
alloc = []
std = ["alloc"]
default = ["std"]

[profile.release]
opt-level = 3
codegen-units=1
lto = "fat"
