[package]
name = "cumsum_f32"
version = "0.1.0"
authors = ["zom <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build]
rustflags = "-C target-cpu=native"

[profile.release]
opt-level = 3
codgen-units=1
lto = "fat"
